[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Interactive/ViewCollider.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Interactive/LightPillar.gd" type="Script" id=2]
[ext_resource path="res://addons/wwise/runtime/nodes/ak_event.gd" type="Script" id=3]

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
render_priority = -1
flags_unshaded = true
albedo_color = Color( 1, 0.59, 0.59, 1 )

[sub_resource type="CylinderShape" id=2]
height = 6.0

[node name="LightPillar" type="Spatial"]
script = ExtResource( 2 )

[node name="Bar" type="CSGCylinder" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
radius = 0.1
height = 6.0
material = SubResource( 3 )

[node name="Light" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
light_color = Color( 1, 0.235294, 0.235294, 1 )
light_energy = 2.73
light_indirect_energy = 2.0
light_specular = 0.585
shadow_enabled = true
omni_range = 10.0
omni_attenuation = 1.7411

[node name="ViewCollider" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )

[node name="CollisionShape" parent="ViewCollider" index="0"]
shape = SubResource( 2 )

[node name="HummingAkEvent" type="Spatial" parent="."]
script = ExtResource( 3 )
event = {
"Id": 2881812561,
"Name": "DEPOSITPOINT"
}

[node name="DepositAkEvent" type="Spatial" parent="."]
script = ExtResource( 3 )
event = {
"Id": 3709765322,
"Name": "DEPOSIT1"
}

[connection signal="interacted" from="ViewCollider" to="." method="_on_ViewCollider_interacted"]

[editable path="ViewCollider"]
